--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -10,16 +10,16 @@
   <%= @blog.content %>
 </p>
 
-<% unless @blog.comments.count.zero? %>
+<% unless @blog.comment.count.zero? %>
   <hr>
 
   <p>
     <strong>Comment:</strong>
-    <%= @blog.comments.count.to_i + "comments" %>
+    <%= @blog.comment.count.to_s + "comments" %>
   </p>
 
   <p>
-    <%= render @blog.comments %>
+    <%= render @blog.comment %>
   </p>
 <% end %>
 
@@ -27,5 +27,5 @@
   <%= render 'comments/form', blog: @blog %>
 </p>
 
-<%= link_to 'Edit', '/blogs/#{blog.id}/edit' %> |
+<%= link_to 'Edit', edit_blog_path(@blog.id) %> |
 <%= link_to 'Back', blogs_path %>
